# python-psql-vscode

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile.app  Dockerfile.db  Dockerfile.dbadmin  configureProject.py  devcontainer.env  devcontainer.json  devcontainer.json.bak  docker-compose.yml  docker-compose.yml.bak  init.json  init.sql
cloning-the-repo/: index.html
docker-dekstop/: index.html
docs/: cloning-the-repo.md  docker-dekstop.md  first-run.md  gpg-and-git.md  gpg-on-ubuntu.md  index.md  prerequisites.md  ssh-on-ubuntu.md  ubuntu.md  using-the-new-repo.md  using-the-template.md  vscode.md
first-run/: index.html
gpg-and-git/: index.html
gpg-on-ubuntu/: index.html
prerequisites/: index.html
search/: search_index.json
ssh-on-ubuntu/: index.html
ubuntu/: index.html
using-the-new-repo/: index.html
using-the-template/: index.html
vscode/: index.html
