[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Pat McLean <github@psmware.ie>"]
license = "AGPL3-only"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.1.2"
mkdocstrings = "^0.15.1"
mkdocs-material = "^7.1.5"
mkdocs-minify-plugin = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"
mkdocs-with-pdf = "^0.8.3"
mkdocs-mermaid2-plugin = "^0.5.1"
ansible-mdgen = "^0.1.0"
mkdocs-git-committers-plugin = "^0.2.1"
django = "^3.2.3"
django-cors-headers = "^3.7.0"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.6.0"
markdown = "^3.3.4"
django-filter = "^2.4.0"
drf-yasg = "^1.20.0"
django-rest-swagger = "^2.2.0"
setuptools = "^56.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"